fix control visibility

--- a/imports/templates/lists/lists.scss
+++ b/imports/templates/lists/lists.scss
@@ -39,7 +39,7 @@
 			}
 
 			.task {
-				display: flex;
+				display: block;
 			}
 		}
 	}
